external-crates/move/crates/move-compiler/tests/move_check/typing/uninferred_type_call.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04010]: cannot infer type
  ┌─ tests/move_check/typing/uninferred_type_call.move:3:9
  │
3 │         foo()
  │         ^^^^^ Could not infer this type. Try adding an annotation
